# hipercam

./: .buildinfo  .env  .gitignore  Pipfile  README.md  README.rst  change_log_0.21.0_0.22.0.html  change_log_0.22.0_1.0.0.html  change_log_1.0.0_1.1.0.html  change_log_1.1.0_1.1.2.html  change_log_1.1.0_1.2.0.html  change_log_1.2.0_1.3.1.html  change_log_1.3.1_1.3.2.html  change_log_1.3.2_1.5.0.html  change_log_1.3.2_to_now.html  change_log_1.5.0_to_now.html  change_log_1.5.1_to_now.html  change_log_1.5.2_to_now.html  change_log_1.5.3_to_now.html  change_log_1.5.4_to_now.html  change_log_1.5.5_to_now.html  change_log_1.5.6_to_now.html  change_log_1.6.0_to_now.html  change_log_1.6.2_to_now.html  change_log_1.6.4_to_now.html  change_log_1.6.5_1.6.6.html  change_log_1.6.5_to_now.html  change_log_1.6.6_1.6.7.html  change_log_v1.6.1_to_now.html  changelog.sh  checklists.html  commands.html  files.html  genindex.html  globals.html  index.html  installation.html  makingmovies.html  news.html  objects.inv  (+14 more)
.doctrees/: change_log_0.21.0_0.22.0.doctree  change_log_0.22.0_1.0.0.doctree  change_log_1.0.0_1.1.0.doctree  change_log_1.1.0_1.1.2.doctree  change_log_1.1.0_1.2.0.doctree  change_log_1.2.0_1.3.1.doctree  change_log_1.3.1_1.3.2.doctree  change_log_1.3.2_1.5.0.doctree  change_log_1.3.2_to_now.doctree  change_log_1.5.0_to_now.doctree  change_log_1.5.1_to_now.doctree  change_log_1.5.2_to_now.doctree  change_log_1.5.3_to_now.doctree  change_log_1.5.4_to_now.doctree  change_log_1.5.5_to_now.doctree  change_log_1.5.6_to_now.doctree  change_log_1.6.0_to_now.doctree  change_log_1.6.2_to_now.doctree  change_log_1.6.4_to_now.doctree  change_log_1.6.5_1.6.6.doctree  change_log_1.6.5_to_now.doctree  change_log_1.6.6_1.6.7.doctree  change_log_v1.6.1_to_now.doctree  checklists.doctree  commands.doctree  environment.pickle  files.doctree  globals.doctree  index.doctree  installation.doctree  makingmovies.doctree  news.doctree  observers.doctree  organisation.doctree  phaseII.doctree  photometry.doctree  plugins.doctree  reduction.doctree  telescope.doctree  ultracam_checklist.doctree
.doctrees/api/: api.doctree  bugs.doctree  details.doctree  hcmformat.doctree  hipercam-ccd.doctree  hipercam-hlog.doctree  hipercam-window.doctree  logging.doctree  quickapi.doctree  windows.doctree
.doctrees/autoapi/: index.doctree
.doctrees/timing/: timing.doctree  timing_tests.doctree
.github/workflows/: documentation.yml
_downloads/06630a40ba52bdce6fe95eb861085644/: ultracam_defects_2021_06_09.dft
_downloads/20394344fd3bf7e5d5f2fa701b984889/: hipercam_defects_2021_06_09.dft
_downloads/2505cf43ff55a7f2c43898768c88d5b7/: ultracam_defects_2018_06_02.dft
_downloads/396f3d67df83d9b6e104195d20d20bb7/: ultraspec_defects_2019_12_08.dft
_downloads/4dc53cb450310784742961f76c9c8bd8/: hipercam_defects_2021_05_13.dft
_downloads/6f7cb7dafb39aeaed80998781ea645c5/: hipercam_defects_2018_05_21.dft
_downloads/a56df6017dbd243470f2e1c44e7b34bc/: hipercam_fpair_2018_04_15.frng
_downloads/a955ece14955e5cc792928cae78c02a8/: hipercam_defects_2021_08_02.dft
_sources/: change_log_0.22.0_1.0.0.rst.txt  change_log_1.0.0_1.1.0.rst.txt  change_log_1.1.0_1.2.0.rst.txt  change_log_1.2.0_1.3.1.rst.txt  change_log_1.3.1_1.3.2.rst.txt  change_log_1.3.2_1.5.0.rst.txt  change_log_1.3.2_to_now.rst.txt  change_log_1.5.0_to_now.rst.txt  change_log_1.5.1_to_now.rst.txt  change_log_1.5.2_to_now.rst.txt  change_log_1.5.3_to_now.rst.txt  change_log_1.5.4_to_now.rst.txt  change_log_1.5.5_to_now.rst.txt  change_log_1.5.6_to_now.rst.txt  change_log_1.6.0_to_now.rst.txt  change_log_1.6.2_to_now.rst.txt  change_log_1.6.4_to_now.rst.txt  change_log_v1.6.1_to_now.rst.txt  checklists.rst.txt  commands.rst.txt  files.rst.txt  globals.rst.txt  index.rst.txt  installation.rst.txt  makingmovies.rst.txt  news.rst.txt  organisation.rst.txt  phaseII.rst.txt  photometry.rst.txt  plugins.rst.txt  reduction.rst.txt  telescope.rst.txt
_sources/api/: api.rst.txt  bugs.rst.txt  details.rst.txt  hcmformat.rst.txt  hipercam-ccd.rst.txt  hipercam-hlog.rst.txt  hipercam-window.rst.txt  logging.rst.txt  quickapi.rst.txt  windows.rst.txt
_sources/autoapi/: index.rst.txt
_static/: documentation_options.js
api/: api.html  bugs.html  details.html  hcmformat.html  hipercam-ccd.html  hipercam-hlog.html  hipercam-window.html  logging.html  quickapi.html  windows.html
autoapi/: index.html
data/: example_headers  hipercam.dockerfile  makedata.conf  reduce.red  ssh-throttle
docs/: Makefile  api.rst  bugs.rst  change_log_0.19.8_0.20.0.rst  change_log_0.20.0_0.21.0.rst  change_log_0.20.0_0.21.1.rst  change_log_0.20.0_to_now.rst  change_log_0.21.0_0.22.0.rst  change_log_0.21.0_to_now.rst  change_log_0.21.1_0.21.2.rst  change_log_0.21.2_0.22.0.rst  change_log_0.22.0_1.0.0.rst  change_log_1.0.0_1.1.0.rst  change_log_1.1.0_1.1.2.rst  change_log_1.1.0_1.2.0.rst  change_log_1.3.2_to_now.rst  change_log_1.5.2_to_now.rst  change_log_1.6.2_to_now.rst  change_log_1.6.5_1.6.6.rst  change_log_1.6.5_to_now.rst  change_log_1.6.6_1.6.7.rst  commands.rst  conf.py  files.rst  full_api.rst  full_api.rst.save  globals.rst  hcmformat.rst  hipercam_defects_2018_05_21.dft  index.rst  installation.rst  make.bat  makingmovies.rst  news.rst  observers.rst  organisation.rst  phaseII.rst  photometry.rst  pipeline.rst  plugins.rst  (+9 more)
hipercam/: Window.py  __init__.py  aperture.py  ccd.py  cline.py  command_line.py  core.py  defect.py  extraction.py  feeder.py  fitting.py  fringe.py  group.py  hcam.py  header.py  hlog.py  input.py  instruments.py  mpl.py  pgp.py  psf_reduction.py  reduction.py  spooler.py  support.pyx  target.py  ucam.py  utils.py  window.py
timing/: timing.html  timing_tests.html
useful/: README  avalanche.py  extinction.py  fringe-runs.py  pfind.py  problem-runs.py
(+368 files in other folders)
