[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = hipercam
description = Astropy affiliated package
long_description = This is a package for reducing data from the high-speed camera HiPERCAM
author = Tom Marsh
author_email = t.r.marsh@warwick.ac.uk
license = BSD
url = http://astropy.org/
edit_on_github = False
github_project = astropy/astropy

[entry_points]
astropy-package-template-example = packagename.example_mod:main
