[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=0

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = hipercam
description = Multi-CCD reduction package
long_description = This is a package for reducing data from the high-speed camera HiPERCAM
author = Tom Marsh
author_email = t.r.marsh@warwick.ac.uk
license = BSD
url = http://www.astro.warwick.ac.uk/

